	PR c++/50296 	* semantics.c (register_constexpr_fundef): Call is_valid_constexpr_fn. 	(cx_check_missing_mem_inits): Handle bases and empty trivial members. 	(validate_constexpr_fundecl): Remove. 	* decl.c (start_preparsed_function): Don't call it. 	* cp-tree.h: Don't declare it.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@178604 138bc75d-0d04-0410-961f-82ee72b054a4